<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


   <ImageView
       android:id="@+id/main_background"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scaleType="fitXY"
       android:src="@drawable/asd"
       tools:layout_editor_absoluteX="0dp"
       tools:layout_editor_absoluteY="0dp" />

   <TextView
       android:id="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/text_main_title"
       android:textSize="@dimen/title_text_size"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:layout_marginTop="15dp"
       android:layout_marginHorizontal="165dp"/>

   <TextView
       android:id="@+id/text_welcome"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/title"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/text_main_welcome"
       android:textSize="@dimen/welcome_text_size"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:layout_marginTop="150dp"/>

   <TextView
      android:id="@+id/text_description"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@+id/text_welcome"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/text_main_desc"
       android:textSize="@dimen/title_text_size"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:layout_marginTop="44dp"
       android:textAlignment="center"
       />

   <EditText
      android:id="@+id/login_et"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/text_description"
       style="@style/main_edit_text"
       android:hint="@string/text_enter_email" />

   <EditText
       android:id="@+id/password_ed"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/login_et"
       style="@style/main_edit_text"
       android:hint="@string/text_enter_password" />


   <Button
       android:id="@+id/main_btn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/password_ed"
       android:layout_marginHorizontal="25dp"
       android:layout_marginTop="15dp"
       android:background="@drawable/btn_main"
       android:text="@string/text_singIn"
       android:onClick="Click"/>

   <LinearLayout
       android:id="@+id/view_main"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toBottomOf="@+id/main_btn"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">

   <TextView
       android:id="@+id/text_view"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@+id/main_btn"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/text_zabyl"
       android:textSize="@dimen/title_text_size"
       android:textColor="@color/white"
       android:textStyle="bold"
       android:textAlignment="center" />

   <TextView
       android:id="@+id/text_view1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="@+id/main_btn"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="@string/text_zabyl"
       android:textSize="@dimen/title_text_size"
       android:textColor="@color/oran"
       android:textStyle="bold"
       android:textAlignment="center" />
   </LinearLayout>

   <ImageView
       android:id="@+id/main_bag"
       android:layout_width="107dp"
       android:layout_height="100dp"
       android:layout_marginBottom="50dp"
       android:textSize="@dimen/welcome_text_size"
       app:layout_constraintBottom_toBottomOf="@+id/text_welcome"
       android:background="@color/white"
       android:src="@drawable/sset"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>